2016-05-05 13:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Partial parsing
	of result records to yield correct status in debuggerView.

2016-05-05 11:23-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Handle more
	escaped sequences to futher clean up output.

2016-05-03 19:40-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Add parsers
	to handle output from various types of MI data.  Code to handle
	each individual case is being written.

2016-05-03 18:00-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Changes
	to allow pid to be passed back to PCDebugger by calling
	setSubProcessId once the pid is parsed from the mi output.

2016-05-03 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	Refactor path to executablePath.

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	Do not permit deletion beyond the new line or the gdb prompt.

2016-03-23 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.h
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerViewDelegateProtocol.h
	Merge in from pipes branch: stdio/stdout over pipes handled in a separate delegate class.

2016-03-23 Riccardo Mottola <rm@gnu.org>

	* Framework/PCBundleManager.m
	* Framework/PCProjectLauncher.m
	Merge from branch: check bundle loading and warn.
