@@ -1,3 +1,7 @@
+2016-05-05 15:43-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Minor changes.
+
 2016-05-05 13:13-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Modules/Debuggers/ProjectCenter/PCDebugger.m
